--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.4.0",
     "bootstrap": "^5.1.3",
     "crypto-js": "^4.1.1",
+    "firebase": "^10.4.0",
     "formik": "^2.4.2",
     "gh-pages": "^5.0.0",
     "react": "^18.2.0",
