--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://lunch-bucket.github.io/lunch-bucket-frontend-web",
+  "homepage": "lunch-bucket-frontend-web/dashboard",
   "name": "lunch-bucket-frontend-web",
   "version": "0.1.0",
   "private": true,
