--- a/public/manifest.json
+++ b/public/manifest.json
@@ -5,7 +5,7 @@
     {
       "src": "lb_logo.png",
       "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "type": "image/x-icon/png"
     },
     {
       "src": "lb_logo.png",
