--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "lunch-bucket-live",
+  "homepage": "lunch-bucket-frontend-web",
   "name": "lunch-bucket",
   "version": "0.1.0",
   "private": true,
